revamped the ui

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>Emmanuel Umeh</title>
   </head>
-  <body>
+  <body class="custom-body">
     <div id="root"></div>
     <!--
       This HTML file is a template.
